<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dayb1"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.mynewproject.RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/logoa"/>
    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#8DF8F7F7"
        android:drawableLeft="@drawable/username2"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#94F7F4F4"
        android:drawableLeft="@drawable/password2"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/edittext_cnf_password"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:background="#94F7F4F4"
        android:drawableLeft="@drawable/password2"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#E64A19"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:textColor="#ffffff"
            android:text="@string/already_registered"
            />

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:text="@string/login"
            />
    </LinearLayout>

</LinearLayout>